[package]
name = "quible-node"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.0", features = ["k256"] }
anyhow = "1.0.86"
bls-signatures = "0.15.0"
bls12_381 = "0.8.0"
bytemuck = "1.17.0"
jsonrpsee = { version = "0.24.3", features = ["http-client", "server", "client", "macros"] }
k256 = { version = "0.13.3", features = ["serde", "ecdsa"] }
once_cell = "1.19.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["serde_json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha3 = "0.10.8"
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread", "time"] }

[[bin]]
name = "client"
path = "src/client.rs"
