[package]
name = "quible-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A blockchain providing real-time set membership attestations"
authors = ["quible team"]

[dependencies]
alloy-primitives = { version = "0.8.0", features = ["k256"] }
anyhow = "1.0.86"
bytemuck = "1.17.0"
futures = "0.3.30"
hex = "0.4.3"
hex-literal = "0.4.1"
hyper = "1.4.1"
jsonrpsee = { version = "0.24.3", features = ["http-client", "server", "client", "macros"] }
k256 = { version = "0.13.3", features = ["serde", "ecdsa"] }
libp2p = { version = "0.54.1", features = ["noise", "ping", "tcp", "tokio", "yamux"] }
libp2p-identity = { version = "0.2.9", features = ["ecdsa", "peerid"] }
once_cell = "1.19.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["serde_json"] }
secp256k1 = { version = "0.29.1", features = ["recovery", "rand", "global-context"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sha3 = "0.10.8"
surrealdb = { version = "1.5.4" }
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread", "time"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }

[dev-dependencies]
surrealdb = { version = "1.5.4", features = ["kv-mem"] }

[[bin]]
name = "client"
path = "src/client.rs"

[package.metadata.deb]
maintainer-scripts = "pkg/deb/"
systemd-units = { enable = true }
depends = "systemd, surreal"
assets = [
    [
        "target/x86_64-unknown-linux-gnu/release/quible-node",
        "usr/share/quible/quible-node",
        "755",
    ]
]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
